Migrate away from Paths to Path per Javadoc
See gh-59