@@ -21,7 +21,6 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -183,7 +182,7 @@ class CxfCodegenPluginTests {
 			Set<File> outputs = wsdl2Java.getOutputs().getFiles().getFiles();
 			assertThat(outputs).hasSize(1);
 			assertThat(outputs.iterator().next().toPath())
-					.endsWithRaw(Paths.get("build/" + wsdl2Java.getName() + "-wsdl2java-generated-sources"));
+					.endsWithRaw(Path.of("build", wsdl2Java.getName(), "-wsdl2java-generated-sources"));
 			assertThat(wsdl2Java.getMainClass().get()).isEqualTo("org.apache.cxf.tools.wsdlto.WSDLToJava");
 			// Can not resolve configuration in unit tests, so assert on error message.
 			assertThatCode(() -> wsdl2Java.getClasspath().getFiles())
@@ -287,7 +286,7 @@ class CxfCodegenPluginTests {
 		Set<File> outputs = wsdl2Java.getOutputs().getFiles().getFiles();
 		assertThat(outputs).hasSize(1);
 		assertThat(outputs.iterator().next().toPath())
-				.endsWithRaw(Paths.get("build/generated-sources/cxf/" + sourceName));
+				.endsWithRaw(Path.of("build", "generated-sources", "cxf", sourceName));
 		assertThat(wsdl2Java.getMainClass().get()).isEqualTo("org.apache.cxf.tools.wsdlto.WSDLToJava");
 		// Can not resolve configuration in unit tests, so assert on error message.
 		assertThatCode(() -> wsdl2Java.getClasspath().getFiles()).hasMessageContaining("configuration ':cxfCodegen'");
